tests/files/lexer_tests/should_fail/095.cmdr
//Should not parse due to missing lparen
if true) echo hi;